--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,15 @@
 
 # dependencies
 /node_modules
+/node_modules/*
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+
+# server
+/server/node_modules
 
 # production
 /build
